crates/engine/tests/integration/snapshots/integration__oracle_parser__snapshot_harold_and_bob_first_numens.snap
---
source: crates/engine/tests/integration/oracle_parser.rs
assertion_line: 982
expression: result
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "ChangesZone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "ChangeZone",
          "origin": "Graveyard",
          "destination": "Battlefield",
          "target": {
            "type": "TriggeringSource"
          },
          "owner_library": false,
          "enter_transformed": false,
          "enter_tapped": false,
          "enters_attacking": false
        },
        "cost": null,
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "ReturnAsAura",
            "enchant_filter": {
              "type": "Typed",
              "type_filters": [
                {
                  "Subtype": "Forest"
                }
              ],
              "controller": "You",
              "properties": []
            },
            "grants": [
              {
                "type": "RemoveAllAbilities"
              },
              {
                "type": "GrantStaticAbility",
                "definition": {
                  "mode": "Continuous",
                  "affected": {
                    "type": "Typed",
                    "type_filters": [
                      {
                        "Subtype": "Forest"
                      }
                    ],
                    "controller": null,
                    "properties": [
                      {
                        "type": "EnchantedBy"
                      }
                    ]
                  },
                  "modifications": [
                    {
                      "type": "GrantAbility",
                      "definition": {
                        "kind": "Activated",
                        "effect": {
                          "type": "Mana",
                          "produced": {
                            "type": "AnyOneColor",
                            "count": {
                              "type": "Fixed",
                              "value": 3
                            },
                            "color_options": [
                              "White",
                              "Blue",
                              "Black",
                              "Red",
                              "Green"
                            ]
                          }
                        },
                        "cost": {
                          "type": "Tap"
                        },
                        "sub_ability": {
                          "kind": "Spell",
                          "effect": {
                            "type": "GivePlayerCounter",
                            "counter_kind": "Rad",
                            "count": {
                              "type": "Fixed",
                              "value": 2
                            },
                            "target": {
                              "type": "Controller"
                            }
                          },
                          "cost": null,
                          "sub_ability": null,
                          "duration": null,
                          "description": null,
                          "target_prompt": null,
                          "condition": null,
                          "optional_targeting": false,
                          "optional": false,
                          "forward_result": false,
                          "sub_link": "SequentialSibling"
                        },
                        "duration": null,
                        "description": "{T}: Add three mana of any one color. You get two rad counters.",
                        "target_prompt": null,
                        "condition": null,
                        "optional_targeting": false,
                        "optional": false,
                        "forward_result": false,
                        "is_mana_ability": true
                      }
                    }
                  ],
                  "condition": null,
                  "affected_zone": null,
                  "effect_zone": null,
                  "active_zones": [],
                  "characteristic_defining": false,
                  "description": "Enchanted Forest has \"{T}: Add three mana of any one color. You get two rad counters.\""
                }
              }
            ]
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false,
          "sub_link": "SequentialSibling"
        },
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": "Battlefield",
      "destination": "Graveyard",
      "trigger_zones": [
        "Graveyard"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "When ~ dies, if it was a creature, return it to the battlefield. It's an Aura enchantment with enchant Forest you control and \"Enchanted Forest has '{T}: Add three mana of any one color. You get two rad counters.'\" ~ loses all other abilities.",
      "constraint": null,
      "condition": {
        "type": "WasType",
        "card_type": "Creature"
      },
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
